--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Carpool" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Carpool" parent="android:Theme.Material.NoActionBar" />
     <!-- Base application theme. -->
-    <style name="Base.Theme.Carpool" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.App" parent="Theme.AppCompat.DayNight">
+        <!-- Personnalisez vos couleurs ici -->
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
     </style>
 </resources>
