--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
     <style name="Theme.Carpool" parent="android:Theme.Material.NoActionBar" />
     <!-- Base application theme. -->
     <style name="Theme.App" parent="Theme.AppCompat.DayNight">
+        <item name="fontFamily">@font/poppins</item>
         <!-- Personnalisez vos couleurs ici -->
         <item name="colorPrimary">#6200EE</item>
         <item name="colorPrimaryVariant">#3700B3</item>
